[project]
name = "riemannmol"
version = "0.1.1"
description = "RiemannMol: properties-guided molecule generation over the atom (plain-SMILES) and fragment (SAFE) latent backends"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "rdkit>=2023.3",
    "torch>=2.0",
    "tqdm>=4.0",
    "huggingface_hub>=0.20",
    "cma>=3.3",
]

[project.scripts]
riemannmol = "RiemannMol.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["RiemannMol"]
